syntax = "proto3";
package report;
option csharp_namespace = "Report.Grpc";


enum ReportTargetType {
    REPORT_TARGET_UNKNOWN = 0;
    REPORT_TARGET_USER = 1;
    REPORT_TARGET_SELLER = 2;
    REPORT_TARGET_PRODUCT = 3;
    REPORT_TARGET_ORDER = 4;
    REPORT_TARGET_MESSAGE = 5;
    REPORT_TARGET_REVIEW = 6;
}

enum ReportCategory {
    REPORT_CATEGORY_UNKNOWN = 0;
    REPORT_CATEGORY_SCAM = 1;
    REPORT_CATEGORY_FRAUD = 2;
    REPORT_CATEGORY_FAKE = 3;
    REPORT_CATEGORY_HARASSMENT = 4;
    REPORT_CATEGORY_SPAM = 5;
}

enum ReportStatus {
    REPORT_STATUS_UNKNOWN = 0;
    REPORT_STATUS_PENDING = 1;
    REPORT_STATUS_REVIEWING = 2;
    REPORT_STATUS_RESOLVED = 3;
    REPORT_STATUS_REJECTED = 4;
}

enum ReportActionType {
    REPORT_ACTION_UNKNOWN = 0;
    REPORT_ACTION_WARNING = 1;
    REPORT_ACTION_BAN_USER = 2;
    REPORT_ACTION_DELETE_PRODUCT = 3;
    REPORT_ACTION_REJECT = 4;
}

//Report Entities
message Report {
    string id = 1;

    string reporter_id = 2;
    string target_id = 3;
    ReportTargetType target_type = 4;
    ReportCategory category = 5;
    string title = 6;
    string description = 7;
    ReportStatus status = 8;
    string assigned_admin_id = 9;
    string created_at = 10;
    string updated_at = 11;
}

message ReportEvidence {
    string id = 1;
    string report_id = 2;
    string url = 3;
    string evidence_type = 4;     //image, video, file
    string note = 5;
    string created_at = 6;
}


// COMMENTS
message ReportComment {
    string id = 1;
    string report_id = 2;
    string user_id = 3;
    string role = 4;              // user | admin
    string comment = 5;
    string created_at = 6;
}


// HISTORY LOG
message ReportHistory {
    string id = 1;
    string report_id = 2;
    ReportStatus old_status = 3;
    ReportStatus new_status = 4;
    string admin_id = 5;
    string note = 6;
    string created_at = 7;
}


// ACTIONS (ADMIN)
message ReportAction {
    string id = 1;
    string report_id = 2;
    string admin_id = 3;
    ReportActionType action_type = 4;
    string reason = 5;
    string created_at = 6;
}

// CREATE REPORT
message CreateReportRequest {
    string reporter_id = 1;
    string target_id = 2;
    ReportTargetType target_type = 3;
    ReportCategory category = 4;
    string title = 5;
    string description = 6;
}
message CreateReportResponse {
    Report report = 1;
}

// GET REPORT FULL DETAILS
message GetReportRequest {
    string id = 1;
}
message GetReportResponse {
    Report report = 1;
    repeated ReportEvidence evidences = 2;
    repeated ReportComment comments = 3;
    repeated ReportHistory history = 4;
    repeated ReportAction actions = 5;
}

// LIST REPORTS
message ListReportsRequest {
    string target_id = 1;
    ReportTargetType target_type = 2;

    ReportStatus status = 3;

    int32 page = 4;
    int32 limit = 5;

    string sort_by = 6;           // created_at, status
    string sort_order = 7;        // asc | desc
}
message ListReportsResponse {
    repeated Report reports = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

// ADD EVIDENCE
message AddEvidenceRequest {
    string report_id = 1;
    string url = 2;
    string evidence_type = 3;
    string note = 4;
}
message AddEvidenceResponse {
    ReportEvidence evidence = 1;
}

// ADD COMMENT
message AddCommentRequest {
    string report_id = 1;
    string user_id = 2;
    string role = 3;
    string comment = 4;
}
message AddCommentResponse {
    ReportComment comment = 1;
}

// UPDATE STATUS
message UpdateReportStatusRequest {
    string report_id = 1;
    string admin_id = 2;
    ReportStatus new_status = 3;
    string note = 4;
}
message UpdateReportStatusResponse {
    ReportHistory history = 1;
}

// CREATE ACTION
message CreateReportActionRequest {
    string report_id = 1;
    string admin_id = 2;
    ReportActionType action_type = 3;
    string reason = 4;
}
message CreateReportActionResponse {
    ReportAction action = 1;
}

// SOFT DELETE REPORT
message SoftDeleteReportRequest {
    string report_id = 1;
    string requester_id = 2;
}
message SoftDeleteReportResponse {
    bool success = 1;
    string message = 2;
}

// HARD DELETE REPORT (Admin only)
message HardDeleteReportRequest {
    string report_id = 1;
    string admin_id = 2;
}
message HardDeleteReportResponse {
    bool success = 1;
    string message = 2;
}


service ReportService {
    rpc CreateReport(CreateReportRequest) returns (CreateReportResponse);
    rpc GetReport(GetReportRequest) returns (GetReportResponse);

    rpc ListReports(ListReportsRequest) returns (ListReportsResponse);

    rpc AddEvidence(AddEvidenceRequest) returns (AddEvidenceResponse);
    rpc AddComment(AddCommentRequest) returns (AddCommentResponse);

    rpc UpdateReportStatus(UpdateReportStatusRequest) returns (UpdateReportStatusResponse);
    rpc CreateReportAction(CreateReportActionRequest) returns (CreateReportActionResponse);
    
    rpc SoftDeleteReport(SoftDeleteReportRequest) returns (SoftDeleteReportResponse);
    rpc HardDeleteReport(HardDeleteReportRequest) returns (HardDeleteReportResponse);
}
